remove peers
