# docs/swagger.json
@@ -491,90 +491,6 @@
         }
       }
     },
-    "/peer/all/": {
-      "get": {
-        "description": "Returns all known peers of the LTO network.",
-        "tags": [
-          "peer"
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "schema": {
-              "$ref": "#/definitions/peerResponse"
-            }
-          },
-          "default": {
-            "description": "Error",
-            "schema": {
-              "$ref": "#/definitions/ErrorResponse"
-            }
-          }
-        }
-      }
-    },
-    "/peer/{address}": {
-      "get": {
-        "description": "Returns a known peer by address from the LTO network.",
-        "tags": [
-          "peer"
-        ],
-        "parameters": [
-          {
-            "name": "address",
-            "in": "path",
-            "description": "A valid LTO address.",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "schema": {
-              "$ref": "#/definitions/peerResponse"
-            }
-          },
-          "default": {
-            "description": "Error",
-            "schema": {
-              "$ref": "#/definitions/ErrorResponse"
-            }
-          }
-        }
-      }
-    },
-    "/peer/all/{period}": {
-      "get": {
-        "description": "Returns all known peers from a period of the LTO network.",
-        "tags": [
-          "peer"
-        ],
-        "parameters": [
-          {
-            "name": "period",
-            "in": "path",
-            "description": "A valid period: day, month, year",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "schema": {
-              "$ref": "#/definitions/generatorResponse"
-            }
-          },
-          "default": {
-            "description": "Error",
-            "schema": {
-              "$ref": "#/definitions/ErrorResponse"
-            }
-          }
-        }
-      }
-    },
     "/proof/{anchor}": {
       "get": {
         "description": "Returns data on a LTO network proof.",
@@ -983,76 +899,6 @@
           "type": "integer"
         },
         "leaseId": {
-          "type": "string"
-        }
-      }
-    },
-    "peerResponse": {
-      "required": [
-        "address",
-        "declared",
-        "peerName",
-        "nonce",
-        "appName",
-        "ltoL",
-        "version",
-        "generator",
-        "port",
-        "api",
-        "uptime",
-        "created",
-        "updated"
-      ],
-      "properties": {
-        "address": {
-          "type": "string"
-        },
-        "declared": {
-          "type": "string"
-        },
-        "peerName": {
-          "type": "string"
-        },
-        "nonce": {
-          "type": "integer"
-        },
-        "appName": {
-          "type": "string"
-        },
-        "version": {
-          "type": "string"
-        },
-        "country": {
-          "type": "string"
-        },
-        "lat": {
-          "type": "number"
-        },
-        "lng": {
-          "type": "number"
-        },
-        "generator": {
-          "type": "string"
-        },
-        "port": {
-          "type": "integer"
-        },
-        "api": {
-          "type": "integer"
-        },
-        "uptime": {
-          "type": "string"
-        },
-        "created": {
-          "type": "string"
-        },
-        "updated": {
-          "type": "string"
-        },
-        "label": {
-          "type": "string"
-        },
-        "url": {
           "type": "string"
         }
       }
